testing site rebuild on commit
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@1071392 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/trunk/templates/basic.html
+++ b/site/trunk/templates/basic.html
@@ -3,6 +3,7 @@
   <head>
     <title>{% block title %}{{ headers.title }}{% endblock %}</title>
 
+    <!-- Test Site Rebuild on Commit -->
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta property="og:image" content="http://www.apache.org/images/asf_logo.gif" />
 
