Minor edit for correct image pathing
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@1071447 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/trunk/templates/basic.html
+++ b/site/trunk/templates/basic.html
@@ -45,7 +45,7 @@
         </form>
       </div>
       <div class="clear"></div>
-      {% block content %}<div id="content" class="grid_16"><img src="images/lucene-net-logo.png" alt="Lucene.Net Logo" style="padding: 50px 10px; float: right;"><div class="section-content">{{ content|markdown }}</div></div>{% endblock %}
+      {% block content %}<div id="content" class="grid_16"><img src="/images/lucene-net-logo.png" alt="Lucene.Net Logo" style="padding: 50px 10px; float: right;"><div class="section-content">{{ content|markdown }}</div></div>{% endblock %}
       <div class="clear"></div>
     </div>
     <div id="copyright" class="container_16">
