--- a/site/trunk/templates/subpage.html
+++ b/site/trunk/templates/subpage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html lang="en">
 <head>
 	<title>Grab the Code - Lucene.Net</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
