--- a/site/trunk/templates/subpage.html
+++ b/site/trunk/templates/subpage.html
@@ -1,14 +1,14 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
 	<title>Grab the Code - Lucene.Net</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	
-	<link rel="stylesheet" type="text/css" href="styles/reset.css" />
-	<link rel="stylesheet" type="text/css" href="styles/layout.css" />
-	<link rel="stylesheet" type="text/css" href="styles/screen.css" />
-	<link rel="stylesheet" type="text/css" href="styles/print.css" media="print" />
-	<link rel="stylesheet" type="text/css" href="styles/lucene.css" />
+	<link rel="stylesheet" type="text/css" href="styles/reset.css">
+	<link rel="stylesheet" type="text/css" href="styles/layout.css">
+	<link rel="stylesheet" type="text/css" href="styles/screen.css">
+	<link rel="stylesheet" type="text/css" href="styles/print.css" media="print">
+	<link rel="stylesheet" type="text/css" href="styles/lucene.css">
 
 	<link rel="icon" href="images/icon.png" type="image/png" />
 	
