--- a/site/trunk/templates/subpage.html
+++ b/site/trunk/templates/subpage.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/print.css" media="print">
 	<link rel="stylesheet" type="text/css" href="styles/lucene.css">
 
-	<link rel="icon" href="images/icon.png" type="image/png" />
+	<link rel="icon" href="images/icon.png" type="image/png">
 	
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
 </head>
@@ -82,7 +82,7 @@
 
 	<div id="footer">
 		<ul id="footer-nav">
-			<li>Copyright 2011 The Apache Software Foundation, Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0.</a> <br />
+			<li>Copyright 2011 The Apache Software Foundation, Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0.</a> <br>
 				Apache Lucene.Net, Lucene.Net, Apache, the Apache feather logo, and the Apache Lucene.Net project logo are 
 				trademarks of The Apache Software Foundation. All other marks mentioned may be trademarks or registered trademarks 
 				of their respective owners.</li>
