git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@1078630 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/trunk/templates/landing.html
+++ b/site/trunk/templates/landing.html
@@ -22,9 +22,9 @@
 			<div id="header">
 				<ul id="global-nav">
 				  <li><a href="http://www.apache.org">Apache.org</a></li>
-				  <li><a href="#">Wiki</a></li>
+				  <li><a href="https://cwiki.apache.org/LUCENENET/">Wiki</a></li>
 				  <li><a href="https://issues.apache.org/jira/browse/LUCENENET">Issue Tracker (JIRA)</a></li>
-				  <li><a href="#">Source</a></li>
+				  <li><a href="https://svn.apache.org/repos/asf/incubator/lucene.net/">Source</a></li>
 				  <li><a href="http://lucene.apache.org/">Lucene Project</a></li>
 				</ul>
 			
@@ -59,40 +59,40 @@
 				<div class="column last">
 					<div class="calltoactionpanel" id="panel1">
 						<h3><a href="#">Grab the Binary</a></h3>
-						<p>The latest binary release is Lucene.Net 2.0, Feb 22, 2011</p>
+						<p>The latest binary release is Lucene.Net 2.9.2, Feb 22, 2011</p>
 						<h3><a href="#">Grab the Latest Source Release</a></h3>
 						<p>The latest source release is 2.9.2 - Feb 22, 2011</p>
-						<h3><a href="#">Grab the Cutting Edge Source</a></h3>
+						<h3><a href="https://svn.apache.org/repos/asf/incubator/lucene.net/trunk/">Grab the Cutting Edge Source</a></h3>
 						<p>Test drive the newest features we don't quite have ready for prime time</p>
 						<h2></h2>
-						<h3><a href="">More code resources...</a></h3>
+						<h3><a href="code.html">More code resources...</a></h3>
 					</div>	
 					<div class="calltoactionpanel" id="panel2">
-						<h3><a href="#">Mailing Lists</a></h3>
+						<h3><a href="conversation.html#mailinglists">Mailing Lists</a></h3>
 						<p>We have a number of mailing lists for you to ask questiosn or keep aprised of the latest developer conversations</p>
-						<h3><a href="#">Issue Tracker</a></h3>
+						<h3><a href="https://issues.apache.org/jira/browse/LUCENENET">Issue Tracker</a></h3>
 						<p>Check out what we are officially working on, what bugs we know about, and help us by submitting enhancements or bugs</p>
 						<h2></h2>
-						<h3><a href="">More ways to join the conversation...</a></h3>
+						<h3><a href="conversation.html">More ways to join the conversation...</a></h3>
 					</div>	
 					<div class="calltoactionpanel" id="panel3">
-						<h3><a href="#">Our Roadmap</a></h3>
+						<h3><a href="roadmap.html">Our Roadmap</a></h3>
 						<p>There are a number of things we are quickly trying to improve in Lucene.Net. From enhancing and optimizing the line by
 						line porting of the Lucene Java source using Sharpen, to creating a more .Net friendly API that utilizes cutting edge parts
 						of the .Net framework. We even have a lot of work that involves this website and reaching the community through blogs and 
 						tutortials.</p>
 						<h2></h2>
-						<h3><a href="">Check out our roadmap...</a></h3>
+						<h3><a href="roadmap.html">Check out our roadmap...</a></h3>
 					</div>	
 					<div class="calltoactionpanel" id="panel4">
-						<h3><a href="#">Getting Started</a></h3>
+						<h3><a href="gettingstarted.html">Getting Started</a></h3>
 						<p>Everything you need to know to get up and running</p>
-						<h3><a href="#">Official FAQ</a></h3>
+						<h3><a href="faq.html">Official FAQ</a></h3>
 						<p>This is a collection of frequently asked questions we've received from the community</p>
-						<h3><a href="#">Wiki</a></h3>
+						<h3><a href="https://cwiki.apache.org/LUCENENET/">Wiki</a></h3>
 						<p></p>
 						<h2></h2>
-						<h3><a href="">More frequently asked questions...</a></h3>
+						<h3><a href="faq.html">More frequently asked questions...</a></h3>
 					</div>	
 				</div>
 				
