--- a/site/trunk/templates/subpage.html
+++ b/site/trunk/templates/subpage.html
@@ -22,9 +22,9 @@
 			<div id="header">
 				<ul id="global-nav">
 				  <li><a href="http://www.apache.org">Apache.org</a></li>
-				  <li><a href="#">Wiki</a></li>
+				  <li><a href="https://cwiki.apache.org/LUCENENET/">Wiki</a></li>
 				  <li><a href="https://issues.apache.org/jira/browse/LUCENENET">Issue Tracker (JIRA)</a></li>
-				  <li><a href="#">Source</a></li>
+				  <li><a href="https://svn.apache.org/repos/asf/incubator/lucene.net/">Source</a></li>
 				  <li><a href="http://lucene.apache.org/">Lucene Project</a></li>
 				</ul>
 			
@@ -60,18 +60,18 @@
 			<div class="column last" style="width:300px">
 				<h2>Lucene.Net</h2>
 				<ul>
-					<li><h3><a href="#">Home</a></h3></li>
-					<li><h3><a href="#">Grab the Code</a></h3></li>
-					<li><h3><a href="#">Join the Conversation</a></h3></li>
-					<li><h3><a href="#">Roadmap</a></h3></li>
-					<li><h3><a href="#">FAQ</a></h3></li>
+					<li><h3><a href="index.html">Home</a></h3></li>
+					<li><h3><a href="code.html">Grab the Code</a></h3></li>
+					<li><h3><a href="conversation.html">Join the Conversation</a></h3></li>
+					<li><h3><a href="roadmap.html">Roadmap</a></h3></li>
+					<li><h3><a href="faq.html">FAQ</a></h3></li>
 				</ul>
 				<h3></h3>
 				<h2>Apache Resources</h2>
 				<ul>
-					<li><h3><a href="#">Lucene Project</a></h3></li>
-					<li><h3><a href="#">Apache.org</a></h3></li>
-					<li><h3><a href="#">Apache Incubator</a></h3></li>
+					<li><h3><a href="http://lucene.apache.org/">Lucene Project</a></h3></li>
+					<li><h3><a href="http://www.apache.org/">Apache.org</a></h3></li>
+					<li><h3><a href="http://incubator.apache.org/">Apache Incubator</a></h3></li>
 				</ul>
 			</div>
 		</div>
