--- a/site/trunk/templates/subpage.html
+++ b/site/trunk/templates/subpage.html
@@ -41,11 +41,7 @@
 
 		<div id="introduction">
 			<div>
-
-				<h1>Grab the Code</h1>
-				<h2>Binaries, Source, Archives, whatever you need...</h2>
-
-				
+                {{ tagline|safe }}
 				<div class="clearer"></div>
 			</div>
 		</div>
