--- a/site/trunk/templates/subpage.html
+++ b/site/trunk/templates/subpage.html
@@ -41,7 +41,7 @@
 
 		<div id="introduction">
 			<div>
-                {{ tagline|safe }}
+                {{ tagline }}
 				<div class="clearer"></div>
 			</div>
 		</div>
