updating subpage to take the tagline
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@1083301 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/trunk/templates/subpage.html
+++ b/site/trunk/templates/subpage.html
@@ -41,7 +41,7 @@
 
 		<div id="introduction">
 			<div>
-                {{ tagline }}
+                {{ tagline|safe }}
 				<div class="clearer"></div>
 			</div>
 		</div>
