updating landing.html links
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@1083307 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/trunk/templates/landing.html
+++ b/site/trunk/templates/landing.html
@@ -58,10 +58,10 @@
 				
 				<div class="column last">
 					<div class="calltoactionpanel" id="panel1">
-						<h3><a href="#">Grab the Binary</a></h3>
-						<p>The latest binary release is Lucene.Net 2.9.2, Feb 22, 2011</p>
-						<h3><a href="#">Grab the Latest Source Release</a></h3>
-						<p>The latest source release is 2.9.2 - Feb 22, 2011</p>
+						<h3><a href="#">Grab the Binary - Coming Soon</a></h3>
+						<p>The latest binary release is Lucene.Net 2.9.2</p>
+						<h3><a href="https://svn.apache.org/repos/asf/incubator/lucene.net/tags/Lucene.Net_2_9_2_RC2/">Grab the Latest Source Release</a></h3>
+						<p>The latest source release is 2.9.2 RC2 - Feb 22, 2011</p>
 						<h3><a href="https://svn.apache.org/repos/asf/incubator/lucene.net/trunk/">Grab the Cutting Edge Source</a></h3>
 						<p>Test drive the newest features we don't quite have ready for prime time</p>
 						<h2></h2>
