updating styles/lucene.css. Formatting h2 and h3
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@1083331 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/trunk/content/lucene.net/styles/lucene.css
+++ b/site/trunk/content/lucene.net/styles/lucene.css
@@ -41,3 +41,6 @@
     border-radius: 3px;
     text-shadow: 1px 1px #fff3c2;
 }
+
+#content h2 { padding-top: 10px; margin-top: 10px }
+#content h3 { }
