Fixing Logo Link - Thanks Simone Chiaretta for the report
git-svn-id: https://svn.apache.org/repos/asf/incubator/lucene.net@1084814 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/trunk/templates/landing.html
+++ b/site/trunk/templates/landing.html
@@ -28,7 +28,7 @@
 				  <li><a href="http://lucene.apache.org/">Lucene Project</a></li>
 				</ul>
 			
-				<a href="/" id="logo">Apache Lucene.Net</a>
+				<a href="http://incubator.apache.org/lucene.net/" id="logo">Apache Lucene.Net</a>
 	
 				<div id="main-nav" class="clearfix"> 
 					<ul class="clearfix"> 
