--- a/site/trunk/templates/subpage.html
+++ b/site/trunk/templates/subpage.html
@@ -28,7 +28,7 @@
 				  <li><a href="http://lucene.apache.org/">Lucene Project</a></li>
 				</ul>
 			
-				<a href="/" id="logo">Apache Lucene.Net</a>
+				<a href="http://incubator.apache.org/lucene.net/" id="logo">Apache Lucene.Net</a>
 	
 				<div id="main-nav" class="clearfix"> 
 					<ul class="clearfix"> 
