--- a/site/trunk/content/lucene.net/styles/lucene.css
+++ b/site/trunk/content/lucene.net/styles/lucene.css
@@ -14,7 +14,7 @@
 
 #footer { clear: both; border-top: 1px solid #1764AA; margin-top: 20px; padding: 5px 3px 5px 3px;}
 
-h1 { color: #1764AA; font: bold 16px; border-bottom: 1px solid #1764AA; }
+h1 { color: #1764AA; font: bold 16px; }
 h2 { }
 h3 { font: 14px;}
 
