--- a/site/trunk/templates/template.html
+++ b/site/trunk/templates/template.html
@@ -25,6 +25,7 @@
 			<li><a href="download.html">Download</a></li>
 			<li><a href="started.html">Getting Started</a></li>
 			<li><a href="community.html">Community</a></li>
+			<li><a href="links.html">Useful Links</a></li>
 		</ul>
 		
 		{% block content %} {{ content|markdown }} {% endblock %}
